...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(WhipSpacing.micro),
    ) {
        IconButton(onClick = onPreviousMonth, enabled = previousEnabled, modifier = Modifier.size(48.dp)) {
            Icon(
                Icons.AutoMirrored.Outlined.ArrowBack,
                contentDescription = "Previous Month",
            )
        }
        if (onMonthClick != null) {
            WhipTextButton(
                onClick = onMonthClick,
                modifier = Modifier
...
            )
        }
        contextualAction?.invoke()
        IconButton(onClick = onNextMonth, enabled = nextEnabled, modifier = Modifier.size(48.dp)) {
            Icon(
                Icons.AutoMirrored.Outlined.ArrowForward,
                contentDescription = "Next Month",
            )
        }
    }
}

@Composable
...
